# pacman-mirrors-rust

./: .gitignore  Cargo.toml  README.md  Xargo.toml
src/: config.rs  lib.rs  main.rs  pacman_mirrors.rs
src/builder/: fasttrack.rs  mirror_list.rs  mod.rs
src/functions/: check_network.rs  configFn.rs  config_fn.rs  http_fn.rs  mirror_file.rs  mod.rs
src/mirrors/: mirror.rs  mod.rs
test/: integration_tests.rs
