[package]
name = "pacman-mirrors"
version = "0.1.0"
authors = ["zentauro <pedrogomezmartin1999@gmail.com>"]
edition = "2018"

[dependencies]
surf = "1.0.3"
clap = "2.33"
futures = "0.3"
pretty_env_logger = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.async-std]
version = "1"
features = ["attributes", "unstable"]

[profile.release]
lto = true
codegen-units = 1
debug = true
panic = 'abort'
